Java17 og nye handlebars